Adicionados repositórios ao pom.xml
